# wiki-scripts

./: .buildinfo  .editorconfig  .gitignore  .gitmodules  ArchWiki.html  MediaWiki.html  README.md  README.rst  alembic.ini  blockbot.py  cache.py  changelog.html  check-categories-timestamps-sanity.py  check-interlanguage.py  check-user-namespace.py  checkdb.py  clone.py  compare_json_to_sql.py  configuration.html  delete-unused-categories.py  dump.py  extlink-checker.py  fabfile.py  find-closed-discussions.py  fix-double-redirects.py  fix-links-avoid-redirect.py  genindex.html  grab.py  import_json_compared_to_sql.py  index.html  interlanguage.py  langfilter-transclusions.py  link-checker.py  list-allusers.py  list-article-summaries.py  list-deleted-revisions.py  list-flagged-pages.py  list-generators.py  list-logevents.py  list-mostbroken.py  (+43 more)
ArchWiki/: __init__.py  lang.py
MediaWiki/: __init__.py  api.py  connection.py  diff.py  dump.py  exceptions.py  interactive.py  rate.py  wikitable.py
_sources/: ArchWiki.txt  MediaWiki.txt  changelog.rst.txt  changelog.txt  configuration.rst.txt  index.rst.txt  index.txt  modules.rst.txt  modules.txt  tutorial.rst.txt
_sources/ws/: ws.ArchWiki.header.rst.txt  ws.ArchWiki.lang.rst.txt  ws.ArchWiki.rst.txt  ws.autopage.rst.txt  ws.autopage.txt  ws.cache.AllRevisionsProps.rst.txt  ws.cache.AllUsersProps.rst.txt  ws.cache.LatestRevisionsText.rst.txt  ws.cache.LatestRevisionsText.txt  ws.cache.rst.txt  ws.cache.txt  ws.checkers.CheckerBase.rst.txt  ws.checkers.ExtlinkReplacements.rst.txt  ws.checkers.ExtlinkStatusChecker.rst.txt  ws.checkers.ManTemplateChecker.rst.txt  ws.checkers.WikilinkChecker.rst.txt  ws.checkers.rst.txt  ws.checkers.smarter_encryption_list.rst.txt  ws.client.api.rst.txt  ws.client.api.txt  ws.client.connection.rst.txt  ws.client.connection.txt  ws.client.meta.rst.txt  ws.client.meta.txt  ws.client.redirects.rst.txt  ws.client.redirects.txt  ws.client.rst.txt  ws.client.site.rst.txt  ws.client.tags.rst.txt  ws.client.user.rst.txt  ws.config.rst.txt  ws.core.api.txt  ws.core.connection.txt  ws.core.lazy.txt  ws.core.meta.txt  ws.core.rate.txt  ws.core.site.txt  ws.core.tags.txt  ws.core.txt  ws.core.user.txt  (+73 more)
_static/: alabaster.css
cache/: AllRevisionsProps.py  AllUsersProps.py  LatestRevisionsText.py  __init__.py
docs/: changelog.rst  conf.py  configuration.rst  index.rst
examples/: README.md  config.ini  diff-revisions.py  dump.py  example-config.py  list-active-users.py  list-allpages-by-language.py  list-allusers.py  list-deleted-revisions.py  list-flagged-pages.py  list-generators.py  list-interwiki-links.py  list-logevents.py  list-unwatched-pages.py  parse-config.py  parse_conf.py  sample.conf
misc/: LocalSettings.php  MediaWiki-import-data.xml  coveragerc  dev_tasks  php.ini  requirements-tests.txt  requirements.txt
misc/lost_revisions_migration/: README.md  import_lost_revisions.py
static/: aur3-archive.full.pkglist  aur3-archive.pkglist
tests/: conftest.py  test_archwiki_header.py  test_archwiki_lang.py  test_config.py  test_lazy.py  test_parser_helpers_encodings.py  test_parser_helpers_wikicode.py  test_rate.py  test_utils.py
tests/ArchWiki/: test_header.py  test_lang.py
tests/checkers/: conftest.py  test_ExtlinkReplacements.py
tests/containers/: .env  compose.yaml
tests/fixtures/: containers.py  database.py  mediawiki.py  mysql.py  postgresql.py  title_context.py
tests/local_mediawiki/: test_basics.py  test_connection.py  test_fixtures.py
ws/: CacheWrapper.py  __init__.py  autopage.py  config.py  diff.py  dump.py  interactive.py  logging.py  pageupdater.py  parser_helpers.py  utils.py  wikitable.py  ws.ArchWiki.header.html  ws.ArchWiki.html  ws.ArchWiki.lang.html  ws.autopage.html  ws.cache.AllRevisionsProps.html  ws.cache.AllUsersProps.html  ws.cache.LatestRevisionsText.html  ws.cache.html  ws.checkers.CheckerBase.html  ws.checkers.ExtlinkReplacements.html  ws.checkers.ExtlinkStatusChecker.html  ws.checkers.ManTemplateChecker.html  ws.checkers.WikilinkChecker.html  ws.checkers.html  ws.checkers.smarter_encryption_list.html  ws.client.api.html  ws.client.connection.html  ws.client.html  ws.client.meta.html  ws.client.redirects.html  ws.client.site.html  ws.client.tags.html  ws.client.user.html  ws.config.html  ws.core.api.html  ws.core.connection.html  ws.core.html  ws.core.lazy.html  (+64 more)
(+192 files in other folders)
