[project]
name = "wiki-scripts"
version = "1.4"
description = "Framework for writing bots, maintenance scripts or performing data analysis on wikis powered by MediaWiki"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "httpx-retries",
    "truststore",
    "jinja2",
    "mwparserfromhell",
]

[project.urls]
Homepage = "https://github.com/lahwaacz/wiki-scripts"
Issues = "https://github.com/lahwaacz/wiki-scripts/issues"

[project.optional-dependencies]
database = [ #
    "sqlalchemy[asyncio] >= 2.0",
    "alembic",
    "psycopg",
    "asyncpg",
]

scripts = [
    "colorlog",
    "tqdm",
    "wikeddiff @ git+https://github.com/lahwaacz/python-wikeddiff.git",
    # script-specific dependencies
    "pyalpm",
    "hstspreload",
    "numpy",
    "matplotlib",
]

doc = [ #
    "sphinx",
]

lint = [ #
    "ruff",
    "mypy",
    "types-Pygments",
    "types-tqdm",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-docker",
    "python-dotenv",
    "pytest-bdd",
    "pytest-mock",
    "pytest-httpx",
]

all = ["wiki-scripts[database,scripts,doc,lint,test]"]

[tool.setuptools]
# avoid ambiguity (Multiple top-level packages discovered in a flat-layout)
packages = ["ws"]

[tool.ruff]
target-version = "py39"
line-length = 160
extend-exclude = ["ws/db/migrations/versions/"]

[tool.ruff.lint]
# Pyflakes (F) and a subset of the pycodestyle (E4, E7, E9) are enabled by default.
# We also enable isort (I) and pycodestyle warnings (W)
select = ["E4", "E7", "E9", "F", "I", "W"]
ignore = [
    # TODO: reconsider this later
    "F403", # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
    "F405", # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star-usage/
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
log_level = "INFO"
testpaths = ["tests"]
python_classes = "test_*"

# Configuration for mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
[tool.mypy]
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
packages = ["ws", "tests"]

[[tool.mypy.overrides]]
module = ["hstspreload", "mwparserfromhell.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["pyalpm.*", "pycman.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["WikEdDiff.*"]
ignore_missing_imports = true
